--- a/index.html
+++ b/index.html
@@ -1,75 +1,85 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jmahc.github.io by jmahc</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Jmahc.github.io</h1>
-        <p>Jordan McArdle&#39;s webpage.</p>
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<head>
 
 
-        <p class="view"><a href="https://github.com/jmahc">View My GitHub Profile</a></p>
 
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="shortcut icon" href="../img/favicon.ico">
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+  <title>Work in Progress</title>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+  <!-- Bootstrap core CSS -->
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+  <link rel="stylesheet" href="../jordanmcardle/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../jordanmcardle/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="../jordanmcardle/bootstrap/css/bootstrap-theme.css">
+  <link rel="stylesheet" href="../jordanmcardle/bootstrap/css/bootstrap-theme.min.css">
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+  <!-- Custom styles for this template -->
+  <link href="../css/cover.css" rel="stylesheet">
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+<body>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+    <div class="site-wrapper">
+      <div class="navbar">
+      </div>
+      <div class="site-wrapper-inner">
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+        <div class="cover-container">
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+          <div class="masthead clearfix">
+            <div class="inner">
+              <!--This is a top left title, but we don't need it.<h3 class="masthead-brand">Cover</h3>-->
+              <ul class="nav masthead-nav">
+                <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
+                <li><a href="#">Contact</a></li>
+                <!--<li><a href="#">Contact</a></li>-->
+              </ul>
+            </div>
+          </div>
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+          <div class="inner cover">
+            <h1 class="cover-heading">Jordan McArdle.</h1>
+            <!--<p class="lead">View/download my resume or contact me.</p>-->
+            <p class="lead">
+              <a href="#" class="btn btn-lg btn-default">Resume</a>
+            </p>
+          </div>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+          <div class="mastfoot">
+            <div class="inner">
+              <p><a href="http://www.facebook.com/jmaccc"><span class="glyphicon glyphicon-thumbs-up"></span></a></p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-              <script type="text/javascript">
-            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-          </script>
-          <script type="text/javascript">
-            try {
-              var pageTracker = _gat._getTracker("UA-55577313-1");
-            pageTracker._trackPageview();
-            } catch(err) {}
-          </script>
+</body>
+</html>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="../jordanmcardle/bootstrap/js/bootstrap.js"></script>
+    <script src="../jordanmcardle/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../jordanmcardle/js/docs.min.js"></script>
+    <script src="../jordanmcardle/js/navbarpin.js"></script>
 
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../jordanmcardle/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
