--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../jordanmcardle/bootstrap/css/bootstrap-theme.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="../css/cover.css" rel="stylesheet">
+  <link href="../jordanmcardle/css/cover.css" rel="stylesheet">
 
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
