--- a/index.html
+++ b/index.html
@@ -53,8 +53,31 @@
             <h1 class="cover-heading">Jordan McArdle.</h1>
             <!--<p class="lead">View/download my resume or contact me.</p>-->
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Resume</a>
+              <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+                Launch demo modal
+              </button>
             </p>
+            <!-- Button trigger modal -->
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Jordan McArdle's Resume</h4>
+                  </div>
+                  <div class="modal-body">
+                    Education
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-cloud-download"></span></button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
 
           <div class="mastfoot">
