--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <!--This is a top left title, but we don't need it.<h3 class="masthead-brand">Cover</h3>-->
               <ul class="nav masthead-nav">
                 <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>
-                <li><a href="#">Contact</a></li>
+                <li class="active"><a href="#"><span class="glyphicon glyphicon-envelope"></span></a></li>
                 <!--<li><a href="#">Contact</a></li>-->
               </ul>
             </div>
