--- a/index.html
+++ b/index.html
@@ -53,13 +53,9 @@
             <h1 class="cover-heading">Jordan McArdle.</h1>
             <!--<p class="lead">View/download my resume or contact me.</p>-->
             <p class="lead">
-              <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-                Launch demo modal
-              </button>
+              <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Resume</button>
             </p>
             <!-- Button trigger modal -->
-
-
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
               <div class="modal-dialog">
