--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h1 class="cover-heading">Jordan McArdle.</h1>
             <!--<p class="lead">View/download my resume or contact me.</p>-->
             <p class="lead">
-              <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Resume</button>
+              <button class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">Resume</button>
             </p>
             <!-- Button trigger modal -->
             <!-- Modal -->
