--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
     <script src="../jordanmcardle/bootstrap/js/bootstrap.min.js"></script>
     <script src="../jordanmcardle/js/docs.min.js"></script>
     <script src="../jordanmcardle/js/navbarpin.js"></script>
+    <script>
+      $("#myModal").modal({"toggle"});
+    </script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../jordanmcardle/js/ie10-viewport-bug-workaround.js"></script>
