might be loading js files twice?

--- a/index.html
+++ b/index.html
@@ -93,13 +93,12 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="../jordanmcardle/bootstrap/js/bootstrap.js"></script>
+    <!--<script src="../jordanmcardle/bootstrap/js/bootstrap.js">    <script src="../jordanmcardle/js/docs.min.js"></script></script>-->
     <script src="../jordanmcardle/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../jordanmcardle/js/docs.min.js"></script>
     <script src="../jordanmcardle/js/navbarpin.js"></script>
-    <script>
+   <!-- <script>
       $("#myModal").modal({"toggle"});
-    </script>
+    </script>-->
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../jordanmcardle/js/ie10-viewport-bug-workaround.js"></script>
