--- a/index.html
+++ b/index.html
@@ -112,5 +112,14 @@
   ga('send', 'pageview');
 
 </script>
+<style>
+  html { 
+    background: url(../jordanmcardle/img/bg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+</style>
   </body>
 </html>
