--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!--Font Awesome/Devicons-->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/devicons.css">
+    <link rel="stylesheet" type="text/css" href="css/devicons.min.css">
     <link href="css/font-awesome-animation.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="css/style.css" type="text/css" rel="stylesheet">
@@ -29,9 +29,9 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <div class="navbar-brand">
-                    <div class="profile-pic"></div>
-                    <div class="profile">
-                        <i class="fa fa-user"></i>Jordan McArdle
+                    <div class="profile-pic faa-parent animated-hover faa-float"></div>
+                    <div class="profile faa-parent animated-hover">
+                        <i class="fa fa-user faa-tada"></i>Jordan McArdle
                     </div>
                 </div>
                 <button id="returnToMe" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -53,8 +53,8 @@
                     </a>
                     <a class="linkedin-logo" href="https://www.linkedin.com/in/jtmcardle" target="_blank">
                         <span class="fa-stack fa-lg animated-hover faa-parent">
-                            <i class="fa fa-circle fa-stack-2x linkedin faa-wrench"></i>
-                            <i class="fa fa-linkedin fa-stack-1x faa-wrench"></i>
+                            <i class="fa fa-circle fa-stack-2x linkedin faa-shake"></i>
+                            <i class="fa fa-linkedin fa-stack-1x faa-shake"></i>
                         </span>
                     </a>
                     <a class="github-logo" href="https://github.com/jmahc" target="_blank">
@@ -65,32 +65,32 @@
                     </a>
                     <a class="google-plus-logo" href="https://plus.google.com/104716789379686556900" target="_blank">
                         <span class="fa-stack fa-lg animated-hover faa-parent">
-                            <i class="fa fa-circle fa-stack-2x google-plus"></i>
-                            <i class="fa fa-google-plus fa-stack-1x faa-burst"></i>
+                            <i class="fa fa-circle fa-stack-2x google-plus faa-pulse"></i>
+                            <i class="fa fa-google-plus fa-stack-1x faa-pulse"></i>
                         </span>
                     </a>
                     <a class="facebook-logo" href="https://www.facebook.com/jmaccc" target="_blank">
                         <span class="fa-stack fa-lg animated-hover faa-parent">
-                            <i class="fa fa-circle fa-stack-2x facebook faa-tada"></i>
-                            <i class="fa fa-facebook fa-stack-1x faa-tada"></i>
+                            <i class="fa fa-circle fa-stack-2x facebook faa-shake"></i>
+                            <i class="fa fa-facebook fa-stack-1x faa-shake"></i>
                         </span>
                     </a>
                     <a class="twitter-logo" href="https://twitter.com/fjord_an" target="_blank">
                         <span class="fa-stack fa-lg animated-hover faa-parent">
-                            <i class="fa fa-circle fa-stack-2x twitter faa-shake"></i>
-                            <i class="fa fa-twitter fa-stack-1x faa-shake"></i>
+                            <i class="fa fa-circle fa-stack-2x twitter faa-ring"></i>
+                            <i class="fa fa-twitter fa-stack-1x faa-ring"></i>
                         </span>
                     </a>
                     <a class="instagram-logo" href="https://instagram.com/jmahc/" target="_blank">
                         <span class="fa-stack fa-lg animated-hover faa-parent">
-                            <i class="fa fa-circle fa-stack-2x instagram faa-float"></i>
-                            <i class="fa fa-instagram fa-stack-1x faa-float"></i>
+                            <i class="fa fa-circle fa-stack-2x instagram faa-pulse"></i>
+                            <i class="fa fa-instagram fa-stack-1x faa-pulse"></i>
                         </span>
                     </a>
                     <a class="steam-logo" href="http://steamcommunity.com/id/jmahc/" target="_blank">
                         <span class="fa-stack fa-lg animated-hover faa-parent">
-                            <i class="fa fa-circle fa-stack-2x steam faa-bounce"></i>
-                            <i class="fa fa-steam fa-stack-1x faa-bounce"></i>
+                            <i class="fa fa-circle fa-stack-2x steam faa-wrench"></i>
+                            <i class="fa fa-steam fa-stack-1x faa-wrench"></i>
                         </span>
                     </a>
                 </li>
@@ -98,92 +98,117 @@
         </div>
     </nav>
     <div class="container">
-        <p>
-            HEY BROOKLEY :)
-        </p>
-        <!--<section id="slide-1" class="homeSlide">
+        <section id="slide-1" class="homeSlide">
             <div class="bcg"
                  data-center="background-position: 50% 0px;"
                  data-top-bottom="background-position: 50% -100px;"
                  data-anchor-target="#slide-1">
                 <div class="hsContainer">
                     <div class="hsContent"
-                         data-0-top="opacity: 1"
-                         data-106-top="opacity: 0" 
+                         data-center="opacity: 1"
+                         data--106-top="opacity: 0" 
                          data-anchor-target="#slide-1 h2">
-                        <h2>Skills used</h2>
+                        <h2>Tech Stack</h2>
+                        <div class="tech-stack">
+                            <ul>
+                                <li><span class="devicons devicons-html5"></span></li>
+                                <li><span class="devicons devicons-css3"></span></li>
+                                <li><span class="devicons devicons-less"></span></li>
+                                <li><span class="devicons devicons-javascript"></span></li>
+                                <li><span class="devicons devicons-jquery"></span></li>
+                                <li><span class="devicons devicons-jquery_ui"></span></li>
+                                <li><span class="devicons devicons-dotnet"></span></li>
+                                <li><span class="devicons devicons-angular"></span></li>
+                                <li><span class="devicons devicons-ruby_on_rails"></span></li>
+
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="slide-2">
+        <section id="slide-2" class="homeSlide">
             <div class="bcg"
                  data-0="background-color:rgb(1,27,59);"
                  data-top="background-color:(0,0,0);"
                  data-anchor-target="#slide-2">
                 <div class="hsContainer">
-                    <div class="hsContent">
-                        <h2 data--200-bottom="opacity: 0"
-                            data-center="opacity: 1"
-                            data-506-bottom="opacity: 1"
-                            data-106-bottom="opacity: 0"
-                            data-anchor-target="#slide-2 h2">
-                            Fade me in and out
+                    <div class="hsContent" data-center="opacity: 1"
+                         data--200-bottom="opacity: 0"
+                         data-206-top="opacity: 1"
+                         data-56-top="opacity: 0"
+                         data-anchor-target="#slide-2 h2">
+                        <h2 style="text-align: right;">
+                            Tools Used
                         </h2>
-                    </div>
-                </div>
-            </div>
-        </section>-->
-        <!--<section id="slide-3" class="homeSlide">
-            <div class="bcg"
-                 data-center="background-position: 0px 50%;"
-                 data-bottom-top="background-position: 0px 40%;"
-                 data-top-bottom="background-position: -40px 50%;"
-                 data-anchor-target="#slide-3">
-                <div class="hsContainer">
-                    <div class="hsContent">
-                        <div class="plaxEl"
-                             data-206-top="opacity: 0"
-                             data-bottom="opacity: 1; position: fixed; top: 606px; width: 100%; left: 400px;"
-                             data--100p-top="opacity: 1;"
-                             data--200p-top="opacity: 0;"
-                             data-anchor-target="#slide-3">
-                            <h2>Slide 3</h2>
+                        <div class="tools-used">
+                            <ul>
+                                <li><span class="devicons devicons-visualstudio"></span></li>
+                                <li><span class="devicons devicons-msql_server"></span></li>
+                                <li><span class="devicons devicons-github"></span></li>
+                                <li><span class="devicons devicons-less"></span></li>
+                                <li><span class="devicons devicons-bootstrap"></span></li>
+                                <li><span class="devicons devicons-javascript"></span></li>
+                                <li><span class="devicons devicons-heroku"></span></li>
+                                <li><span class="devicons devicons-sublime"></span></li>
+                                <li><span class="devicons devicons-chrome"></span></li>
+                                <li><span class="devicons devicons-firefox"></span></li>
+                                <li><span class="devicons devicons-ie"></span></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>-->
-        <!--<section id="slide-5" class="homeSlide homeSlideTall2">
-            <div class="bcg">&nbsp;</div>
-            <div class="bcg bcg2"
-                 data-bottom-top="opacity: 0;"
-                 data--100p-bottom="opacity: 0;"
-                 data--200p-bottom="opacity: 1;"
-                 data-anchor-target="#slide-5">
+        </section>
+        <section id="slide-3" class="homeSlide">
+            <div class="bcg"
+                 data-center="background-position: 50% 0px;"
+                 data-top-bottom="background-position: 50% -100px;"
+                 data-anchor-target="#slide-3">
                 <div class="hsContainer">
                     <div class="hsContent"
-                         data-bottom-top="opacity: 0;"
                          data-center="opacity: 1"
-                         data-anchor-target="#slide-5">
-                        <h2>Fixed element fading in and out</h2>
+                         data--106-top="opacity: 0"
+                         data-anchor-target="#slide-3 h2">
+                        <h2>Operating Systems/Other</h2>
+                        <div class="tools-used">
+                            <ul>
+                                <li><span class="devicons devicons-windows"></span></li>
+                                <li><span class="devicons devicons-apple"></span></li>
+                                <li><span class="devicons devicons-ubuntu"></span></li>
+                                <li><span class="devicons devicons-photoshop"></span></li>
+                                <li><span class="devicons devicons-illustrator"></span></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="bcg bcg3"
-                 data--0p-bottom="opacity: 0;"
-                 data--100p-bottom="opacity: 1;"
-                 data-anchor-target="#slide-5">
+        </section>
+        <section id="slide-4" class="homeSlide">
+            <div class="bcg"
+                 data-0="background-color:rgb(1,27,59);"
+                 data-top="background-color:(0,0,0);"
+                 data-anchor-target="#slide-4">
                 <div class="hsContainer">
                     <div class="hsContent"
-                         data-100-bottom="opacity: 0;"
-                         data-bottom="opacity: 1;"
-                         data-anchor-target="#slide-5">
-                        <h2>The End</h2>
+                         data--0-bottom="opacity: 0"
+                         data-center="opacity: 1"
+                         data-206-top="opacity: 1"
+                         data-10-top="opacity: 0"
+                         data-anchor-target="#slide-4 h2">
+                        <h2 style="text-align: right;">
+                            View my Gists<br /> or add me on Steam!
+                        </h2>
+                        <div class="tools-used">
+                            <ul>
+                                <li><a href="https://gist.github.com/jmahc"><span class="devicons devicons-github" style=" font-size: 2.5em; position: absolute; right: 120px; top: 0;"></span></a></li>
+                                <li><a href="http://steamcommunity.com/id/jmahc/"><i class="fa fa-steam fa-stack-2x" style="position: relative; top: 10px;"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-        </section>-->
+        </section>
     </div>
     <footer></footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
