--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container">
+    <div id="skrollr-body" class="container">
         <section id="slide-1" class="homeSlide">
             <div class="bcg"
                  data-center="background-position: 50% 0px;"
