Storing font-awesome locally

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!--Font Awesome/Devicons-->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/devicons.min.css">
     <link href="css/font-awesome-animation.min.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
