Image height changes

--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
     <meta name="author" content="Jordan McArdle">
+    <meta name="description" content="A portfolio">
     <link rel="shortcut icon" href="images/favicon.ico">
-    <title>Work in Progress</title>
+    <title>Jordan McArdle</title>
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!--Font Awesome/Devicons-->
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/devicons.min.css">
-    <link href="css/font-awesome-animation.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome-animation.min.css" />
     <!-- Custom styles for this template -->
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -24,7 +25,6 @@
     <![endif]-->
 </head>
 <body class="home-page">
-    <!--<nav class="navbar navbar-default navbar-static-top" id="nav" data-0="position:static;" data-top-top="position:fixed;top:0; left:0;" data-edge-strategy="set">-->
     <nav class="navbar navbar-default navbar-static-top">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -146,9 +146,6 @@
                                 <li><span class="devicons devicons-visualstudio"></span></li>
                                 <li><span class="devicons devicons-msql_server"></span></li>
                                 <li><span class="devicons devicons-github"></span></li>
-                                <li><span class="devicons devicons-less"></span></li>
-                                <li><span class="devicons devicons-bootstrap"></span></li>
-                                <li><span class="devicons devicons-javascript"></span></li>
                                 <li><span class="devicons devicons-heroku"></span></li>
                                 <li><span class="devicons devicons-sublime"></span></li>
                                 <li><span class="devicons devicons-chrome"></span></li>
